--- a/pom.xml
+++ b/pom.xml
@@ -50,16 +50,16 @@
 			</plugin>
 
 
-			<!-- Plugin của Maven Compiler để hỗ trợ JDK 21 -->
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.10.1</version> <!-- Phiên bản mới hỗ trợ JDK 21 -->
-				<configuration>
-					<source>21</source>
-					<target>21</target>
-				</configuration>
-			</plugin>
+<!--			&lt;!&ndash; Plugin của Maven Compiler để hỗ trợ JDK 21 &ndash;&gt;-->
+<!--			<plugin>-->
+<!--				<groupId>org.apache.maven.plugins</groupId>-->
+<!--				<artifactId>maven-compiler-plugin</artifactId>-->
+<!--				<version>3.10.1</version> &lt;!&ndash; Phiên bản mới hỗ trợ JDK 21 &ndash;&gt;-->
+<!--				<configuration>-->
+<!--					<source>21</source>-->
+<!--					<target>21</target>-->
+<!--				</configuration>-->
+<!--			</plugin>-->
 		</plugins>
 	</build>
 
